added captions and descriptions

--- a/index.html
+++ b/index.html
@@ -34,63 +34,63 @@
 					<div id="main">
 						<article class="thumb">
 							<a href="images/fulls/01.jpg" class="image"><img src="images/thumbs/01.jpg" alt="your alt description here" /></a>
-							<h2>First Image</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>The Grazing Sheep</h2>
+							<p>Basking in the late-afternoon sun, a flock of sheep feast on grass.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/02.jpg" class="image"><img src="images/thumbs/02.jpg" alt="" /></a>
-							<h2>Nisl adipiscing</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>A Fence Between Us</h2>
+							<p>Only a thin wiry fence held together by wooden poles separates the safety of the farm from the unknown perils of the outside world.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/03.jpg" class="image"><img src="images/thumbs/03.jpg" alt="" /></a>
-							<h2>Tempus aliquam veroeros</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>One Road Diverged in a Wood</h2>
+							<p>A narrow, paved trail leads us from civilization to nature.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/04.jpg" class="image"><img src="images/thumbs/04.jpg" alt="" /></a>
-							<h2>Aliquam ipsum sed dolore</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Shade</h2>
+							<p>Off the beaten path, one may find respite from the sun while listening to the flowing water of Stroubles Creek.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/05.jpg" class="image"><img src="images/thumbs/05.jpg" alt="" /></a>
-							<h2>Cursis aliquam nisl</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Fall Foliage</h2>
+							<p>The leaves of southwestern Virginia shine bright green in the early Autumn air.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/06.jpg" class="image"><img src="images/thumbs/06.jpg" alt="" /></a>
-							<h2>Sed consequat phasellus</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>An Aging Tree</h2>
+							<p>Many may recall climbing a thick, trunky oak tree such as this in their youth.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/07.jpg" class="image"><img src="images/thumbs/07.jpg" alt="" /></a>
-							<h2>Mauris id tellus arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Further Downstream</h2>
+							<p>The thick brush surrounding Stroubles Creek encapsulates a feeling of intimacy with nature.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/08.jpg" class="image"><img src="images/thumbs/08.jpg" alt="" /></a>
-							<h2>Nunc vehicula id nulla</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>To Greener Pastures</h2>
+							<p>From the cover of shade, a barn is seen in the distance, while cows graze the land.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/09.jpg" class="image"><img src="images/thumbs/09.jpg" alt="" /></a>
-							<h2>Neque et faucibus viverra</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>The Shape of Water</h2>
+							<p>One can almost sense what it would be like to feel the cool water of the creek rush through their hands.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/10.jpg" class="image"><img src="images/thumbs/10.jpg" alt="" /></a>
-							<h2>Mattis ante fermentum</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>A Thirsty Tree</h2>
+							<p>The effects of erosion begin to take root, as the tree takes a dip into the creek for a much-needed quenching of thirst.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/11.jpg" class="image"><img src="images/thumbs/11.jpg" alt="" /></a>
-							<h2>Sed ac elementum arcu</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Beyond our Horizons</h2>
+							<p>In the foreground, the colors of autumn prevail as the rolling hills of Blacksburg are seen in the distance.</p>
 						</article>
 						<article class="thumb">
 							<a href="images/fulls/12.jpg" class="image"><img src="images/thumbs/12.jpg" alt="" /></a>
-							<h2>Vehicula id nulla dignissim</h2>
-							<p>Nunc blandit nisi ligula magna sodales lectus elementum non. Integer id venenatis velit.</p>
+							<h2>Looming Above Us</h2>
+							<p>Perhaps nothing is more comforting than the shade of a blooming tree in the warm September sun.</p>
 						</article>
 					</div>
 
@@ -99,7 +99,7 @@
 						<div class="inner split">
 							<div>
 								<section>
-									<h2>About me</h2>
+									<h2>About Me</h2>
 									<p>I am a Hokie and I cannot lie
 You other brothers can't deny.
 I am a Hokie and I cannot lie
