--- a/index.html
+++ b/index.html
@@ -100,21 +100,19 @@
 							<div>
 								<section>
 									<h2>About Me</h2>
-									<p>I am a Hokie and I cannot lie
-You other brothers can't deny.
-I am a Hokie and I cannot lie
-You other brothers can't deny. I am a Hokie and I cannot lie
-You other brothers can't deny.</p>
+									<p>My name is Shelton Moss and I am a sophomore at Virginia Tech.
+									My website, Shelton's Photo Gallery, serves as an online portfolio
+									containing images of fall in Blacksburg for the publication
+									<i>Southwest Virginia Hokies Magazine</i>. I hope you indulge yourself
+									in the beautiful colors and landscapes of Blacksburg, Virginia.</p>
 								</section>
 								<section>
 									<h2>Follow me on ...</h2>
 									<ul class="icons">
-										<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-										<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-										<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+										<li><a href="https://twitter.com/SheltonMoss21" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="https://www.facebook.com/ShellyShellfish21?ref=br_rs" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+										<li><a href="https://github.com/jsm21" class="icon fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="https://www.linkedin.com/in/shelton-moss-957263160/" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 									</ul>
 								</section>
 
