--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 									<p>My name is Shelton Moss and I am a sophomore at Virginia Tech.
 									My website, Shelton's Photo Gallery, serves as an online portfolio
 									containing images of fall in Blacksburg for the publication
-									<i>Southwest Virginia Hokies Magazine</i>. These photos were taken in
+									<i>Southwest Virginia Hokies Magazine</i>. These photos were taken
 									in late September 2018 around Stroubles Creek and the Huckleberry Trail.
 									I hope you indulge yourself in the beautiful colors and landscapes of Blacksburg, Virginia.</p>
 								</section>
